navi $PWD/docs is the only one from now on
Signed-off-by: phanirithvij <phanirithvij2000@gmail.com>

--- a/home/modules/config/tmux/.tmux.conf
+++ b/home/modules/config/tmux/.tmux.conf
@@ -63,7 +63,7 @@ bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
 
 bind-key -n C-j split-window -c "#{pane_current_path}" \
- "$SHELL --login -i -c 'navi --print --path $PWD | head -c -1 | tmux load-buffer -b tmp - ; tmux paste-buffer -p -t {last} -b tmp -d'"
+ "$SHELL --login -i -c 'navi --print --path \"$PWD/docs\" | head -c -1 | tmux load-buffer -b tmp - ; tmux paste-buffer -p -t {last} -b tmp -d'"
 
 bind-key V choose-window "join-pane -v -s "%%""
 bind-key H choose-window "join-pane -h -s "%%""
