check, todo yaml fmt
Signed-off-by: phanirithvij <phanirithvij2000@gmail.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,6 +48,7 @@ jobs:
           path: |
             ~/.cache/nix/
           key: ${{ runner.os }}
+      - run: nix flake check
       - run: nix profile install github:numtide/system-manager github:viperML/nh
       - run: sudo $(which system-manager) switch --flake .#gha
       #- run: system-manager build --flake .#gha
