--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,6 +36,10 @@ jobs:
       - uses: actions/checkout@v4
        # enables flakes, nix-command, sets runner as trusted user
       - uses: DeterminateSystems/nix-installer-action@v12
+        with:
+          extra-conf: |
+            sandbox = relaxed
+      # TODO sandbox relax only for dprint plugins possible?
       - uses: DeterminateSystems/magic-nix-cache-action@main
 
       # crazy thing, magic-nix-cache runs on top of attic
