no need dprint settings to use that treefmt
Signed-off-by: phanirithvij <phanirithvij2000@gmail.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,10 +36,11 @@ jobs:
       - uses: actions/checkout@v4
        # enables flakes, nix-command, sets runner as trusted user
       - uses: DeterminateSystems/nix-installer-action@v12
-        with:
-          extra-conf: |
-            sandbox = relaxed
+      #with:
+      #   extra-conf: |
+      #     sandbox = relaxed
       # TODO sandbox relax only for dprint plugins possible?
+      # TODO file an issue in treefmt-nix repo about dprint plugins
       - uses: DeterminateSystems/magic-nix-cache-action@main
 
       # crazy thing, magic-nix-cache runs on top of attic
