--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -63,7 +63,7 @@ jobs:
       - run: nh os build -H iron -s tty . --no-nom
       - run: nix build .#homeConfigurations."rithvij@iron".activationPackage
       - run: nix build .#homeConfigurations."rithviz@rithviz-inspiron7570".activationPackage
-      - run: nix run .#nix -- flake schema
+      - run: nix run .#nix -- flake show
       #- run: nix build .#homeConfigurations."runner".activationPackage
       #- run: nix build .#homeConfigurations."root@vpshostname".activationPackage
       #- name: keypair for nix-serve and run
