--- a/home/modules/config/hypr/hyprland.conf
+++ b/home/modules/config/hypr/hyprland.conf
@@ -185,3 +185,13 @@ windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 
 # https://wiki.hyprland.org/Configuring/Performance/#how-do-i-make-hyprland-draw-as-little-power-as-possible-on-my-laptop
 misc:vfr = true
+
+# Clipboard Manager
+exec-once = wl-paste --type text --watch cliphist store #Stores only text data
+exec-once = wl-paste --type image --watch cliphist store #Stores only image data
+bind = SUPER, V, exec, cliphist list | wofi --dmenu | cliphist decode | wl-copy
+
+# video play paues bindings
+bind=,172,exec,playerctl play-pause
+bind=,171,exec,playerctl next
+bind=,173,exec,playerctl previous
