--- a/home/modules/config/hypr/hyprland.conf
+++ b/home/modules/config/hypr/hyprland.conf
@@ -32,8 +32,11 @@ general {
     border_size = 1
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
+    #col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
+    # garuda conf
+    col.active_border = rgba(33ccffee) rgba(8f00ffee) 45deg
     col.inactive_border = rgba(595959aa)
+
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
     resize_on_border = true
@@ -95,6 +98,8 @@ input {
 
     touchpad {
         natural_scroll = true
+	tap-to-click = true
+	disable_while_typing = true
     }
 }
 
@@ -116,10 +121,10 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, Q, exec, $terminal
 bind = $mainMod, C, killactive,
-bind = $mainMod, M, exit,
+bind = $mainMod, X, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, F, fullscreen, 0
-bind = $mainMod, V, togglefloating,
+bind = $mainMod, M, togglefloating,
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
