--- a/home/modules/config/hypr/hyprland.conf
+++ b/home/modules/config/hypr/hyprland.conf
@@ -13,9 +13,9 @@ $menu = wofi --show drun
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
 
-# exec-once = $terminal
-# exec-once = nm-applet &
-# exec-once = waybar & hyprpaper & firefox
+exec-once = $terminal
+exec-once = nm-applet &
+exec-once = waybar & hyprpaper & firefox
 
 # See https://wiki.hyprland.org/Configuring/Environment-variables/
 
