--- a/home/modules/config/hypr/hyprland.conf
+++ b/home/modules/config/hypr/hyprland.conf
@@ -34,7 +34,7 @@ general {
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
     #col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
     # garuda conf
-    col.active_border = rgba(33ccffee) rgba(8f00ffee) 45deg
+    col.active_border = rgb(fdfb96)
     col.inactive_border = rgba(595959aa)
 
 
