--- a/home/modules/config/hypr/hyprland.conf
+++ b/home/modules/config/hypr/hyprland.conf
@@ -35,7 +35,7 @@ general {
     #col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
     # garuda conf
     col.active_border = rgb(fdfb96)
-    col.inactive_border = rgba(595959aa)
+    col.inactive_border = rgba(595959ff)
 
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
@@ -126,6 +126,7 @@ bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, F, fullscreen, 0
 bind = $mainMod, M, togglefloating,
 bind = $mainMod, R, exec, $menu
+bind = $mainMod, L, exec, hyprlock
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 
