--- a/home/modules/config/hypr/hyprland.conf
+++ b/home/modules/config/hypr/hyprland.conf
@@ -129,6 +129,7 @@ bind = $mainMod, R, exec, $menu
 bind = $mainMod, L, exec, hyprlock
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod, B, exec, pkill -SIGUSR1 waybar
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
