--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,12 +24,19 @@ jobs:
           sudo rm -rf /home/linuxbrew
           sudo rm -rf /home/runner/.rustup
       - uses: actions/checkout@v4
+      - name: tailscale use iron as builder
+        uses: tailscale/github-action@v2
+        with:
+          oauth-client-id: ${{ secrets.TS_OAUTH_CLIENT_ID }}
+          oauth-secret: ${{ secrets.TS_OAUTH_SECRET }}
+          tags: tag:ci
+          version: 1.70.0
        # enables flakes, nix-command, sets runner as trusted user
       - uses: DeterminateSystems/nix-installer-action@v12
         with:
           extra-conf: |
-            substituters = https://cache.nixos.org https://nix-community.cachix.org https://cosmic.cachix.org
-            trusted-public-keys = cache.nixos.org-1:6NCHdD59X431o0gWypbMrAURkbJ16ZPMQFGspcDShjY= nix-community.cachix.org-1:mB9FSh9qf2dCimDSUo8Zy7bkq5CX+/rkCWyvRCYg3Fs= cosmic.cachix.org-1:Dya9IyXD4xdBehWjrkPv6rtxpmMdRel02smYzA85dPE=
+            substituters = http://iron:5000
+            trusted-public-keys = iron:RiBHQE6zmBos9J6DRbp+9WvUZGYotzFO0JC4om94R24=
       # TODO sandbox relax only for dprint plugins possible?
       # TODO file an issue in treefmt-nix repo about dprint plugins
       - uses: DeterminateSystems/magic-nix-cache-action@main
