--- a/home/modules/config/tmux/.tmux.conf
+++ b/home/modules/config/tmux/.tmux.conf
@@ -16,8 +16,8 @@ set -g message-style "bg=#252525,fg=#cccccc"
 
 set -g status-left ""
 set -g status-right ""
-#setw -g window-status-current-format ""
-setw -g window-status-current-format "🫠"
+setw -g window-status-current-format ""
+#setw -g window-status-current-format "🫠"
 set -g window-status-style fg=color44
 
 # pane options
@@ -62,11 +62,15 @@ bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
 
-bind-key -n C-j split-window -c "#{pane_current_path}" \
- "$SHELL --login -i -c 'navi --print --path \"$PWD/docs\" | head -c -1 | tmux load-buffer -b tmp - ; tmux paste-buffer -p -t {last} -b tmp -d'"
+bind -n C-j split-window -c '#{pane_current_path}' \
+  "navi --print --path \"\$PWD/docs\" | head -c -1 | tmux load-buffer -b tmp - ; tmux paste-buffer -p -t {last} -b tmp -d"
 
 bind-key V choose-window "join-pane -v -s "%%""
 bind-key H choose-window "join-pane -h -s "%%""
+
+bind  c  new-window      -c "#{pane_current_path}"
+bind  %  split-window -h -c "#{pane_current_path}"
+bind '"' split-window -v -c "#{pane_current_path}"
 
 set -g history-limit 10000
 
