comment [skip ci]
Signed-off-by: phanirithvij <phanirithvij2000@gmail.com>

--- a/home/modules/config/tmux/.tmux.conf
+++ b/home/modules/config/tmux/.tmux.conf
@@ -62,6 +62,8 @@ bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
 
+# $PWD vs \$PWD == $(pwd) == .
+# see https://old.reddit.com/r/tmux/comments/1eevgie/splitwindow_pane_current_path_behavior_with_pwd/
 bind -n C-j split-window -c '#{pane_current_path}' \
   "navi --print --path \"\$PWD/docs\" | head -c -1 | tmux load-buffer -b tmp - ; tmux paste-buffer -p -t {last} -b tmp -d"
 
