--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,6 +19,7 @@ jobs:
           sudo rm -rf /usr/local/share/chromium
           sudo rm -rf /usr/local/lib/node_modules
           sudo rm -rf /usr/local/lib/heroku
+          sudo rm -rf /usr/local/lib/android
           sudo rm -rf /var/lib/docker/overlay2
           sudo rm -rf /home/linuxbrew
           sudo rm -rf /home/runner/.rustup
