--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,8 +30,6 @@ jobs:
       # TODO file an issue in treefmt-nix repo about dprint plugins
       - uses: DeterminateSystems/magic-nix-cache-action@main
       # crazy thing, magic-nix-cache runs on top of attic
-      #- name: Debugging with browser
-      #  uses: fawazahmed0/action-debug@v2
       # https://sourcegraph.com/github.com/osdev-wiki/wiki/-/blob/.github/workflows/sitegen.yml?L43:13-43:25
       - name: cache dependency builds
         uses: actions/cache@v2
@@ -50,4 +48,6 @@ jobs:
           which swapspace || true
       - run: nix build .#homeConfigurations."runner".activationPackage
       - run: nix run .#home-manager -- switch --flake . -b bak
-      - run: bash scripts/build.sh
+      - name: Debugging with browser
+        uses: fawazahmed0/action-debug@v2
+    #- run: bash scripts/build.sh
