wrapper-manager init
Signed-off-by: phanirithvij <phanirithvij2000@gmail.com>

--- a/pkgs/wrapped-pkgs/tmux/tmux.conf
+++ b/pkgs/wrapped-pkgs/tmux/tmux.conf
@@ -37,7 +37,8 @@ bind C-a send-prefix
 bind -r k select-pane -t .+1 \;  resize-pane -Z
 
 # When zooming hide status (true zoom)
-set-hook -g after-resize-pane "run-shell ~/.tmux/resize-hook.sh"
+# [at]var[at] are managed by nix
+set-hook -g after-resize-pane "run-shell @resize-hook-script@"
 #set-hook -g session-created "run-shell 'echo 0 > ~/.tmux/.zoomed_flag'"
 set-hook -g session-created "run-shell 'redis-cli set tmux_zoomed 0 > /dev/null'"
 
@@ -116,7 +117,8 @@ bind v split-window -h -c "#{pane_current_path}"
 bind h split-window -v -c "#{pane_current_path}"
 
 # Config reload with prefix+r
-bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf relaoded."
+# HOW? without predefined location?
+bind-key r source-file ~/.tmux.conf \; display-message "tmux conf relaoded."
 
 # neovim :checkhealth suggests this
 set-option -sg escape-time 10
@@ -128,11 +130,7 @@ set -ga terminal-overrides ",xterm-256color:Tc"
 bind-key -T root M-m new-window "gotty -w --port 2999 tmux attach -t $(tmux display -p '#S')"
 
 # plugins
-set -g @plugin 'tmux-plugins/tpm'
-
-#set -g @plugin 'xamut/tmux-network-bandwidth'
 #set-option -g status-right "#{network_bandwidth}"
-
-set -g @plugin 'tmux-plugins/tmux-fpp'
-
-run '~/.tmux/plugins/tpm/tpm'
+#set-option -g @tmux-network-bandwidth-padding 12
+#TODO make it work https://github.com/ilya-manin/tmux-network-bandwidth
+#run-shell ~/.tmux/plugins/tmux-network-bandwidth.tmux
