tmux conf disable reload
Signed-off-by: phanirithvij <phanirithvij2000@gmail.com>

--- a/pkgs/wrapped-pkgs/tmux/tmux.conf
+++ b/pkgs/wrapped-pkgs/tmux/tmux.conf
@@ -118,7 +118,7 @@ bind h split-window -v -c "#{pane_current_path}"
 
 # Config reload with prefix+r
 # HOW? without predefined location?
-bind-key r source-file ~/.tmux.conf \; display-message "tmux conf relaoded."
+#bind-key r source-file ~/.tmux.conf \; display-message "tmux conf reloaded."
 
 # neovim :checkhealth suggests this
 set-option -sg escape-time 10
