tmux: sesh, tmuxp
Signed-off-by: phanirithvij <phanirithvij2000@gmail.com>

--- a/pkgs/wrapped-pkgs/tmux/tmux.conf
+++ b/pkgs/wrapped-pkgs/tmux/tmux.conf
@@ -134,3 +134,10 @@ bind-key -T root M-m new-window "gotty -w --port 2999 tmux attach -t $(tmux disp
 #set-option -g @tmux-network-bandwidth-padding 12
 #TODO make it work https://github.com/ilya-manin/tmux-network-bandwidth
 #run-shell ~/.tmux/plugins/tmux-network-bandwidth.tmux
+
+# home-manager generated config
+source-file ~/.config/tmux/tmux.conf
+
+# sesh recommendations https://github.com/joshmedeski/sesh#recommended-tmux-settings
+bind-key x kill-pane # skip "kill-pane 1? (y/n)" prompt
+set -g detach-on-destroy off  # don't exit from tmux when closing a session
