--- a/pkgs/wrapped-pkgs/tmux/tmux.conf
+++ b/pkgs/wrapped-pkgs/tmux/tmux.conf
@@ -135,9 +135,24 @@ bind-key -T root M-m new-window "gotty -w --port 2999 tmux attach -t $(tmux disp
 #TODO make it work https://github.com/ilya-manin/tmux-network-bandwidth
 #run-shell ~/.tmux/plugins/tmux-network-bandwidth.tmux
 
-# home-manager generated config
-source-file ~/.config/tmux/tmux.conf
-
 # sesh recommendations https://github.com/joshmedeski/sesh#recommended-tmux-settings
 bind-key x kill-pane # skip "kill-pane 1? (y/n)" prompt
 set -g detach-on-destroy off  # don't exit from tmux when closing a session
+
+# from sesh hm module, as I am using wrapper-manager for tmux I need to have it defined here, myself.
+# or move away from wrapper-manager for tmux and use programs.tmux in hm (I don't think so)
+bind-key "g" run-shell "sesh connect \"$(
+   sesh list --icons | fzf-tmux -p 80%,70% \
+     --no-sort --ansi --border-label ' sesh ' --prompt '⚡  ' \
+     --header '  ^a all ^t tmux ^g configs ^x zoxide ^d tmux kill ^f find' \
+     --bind 'tab:down,btab:up' \
+     --bind 'ctrl-a:change-prompt(⚡  )+reload(sesh list --icons)' \
+     --bind 'ctrl-t:change-prompt(🪟  )+reload(sesh list -t --icons)' \
+     --bind 'ctrl-g:change-prompt(⚙️  )+reload(sesh list -c --icons)' \
+     --bind 'ctrl-x:change-prompt(📁  )+reload(sesh list -z --icons)' \
+     --bind 'ctrl-f:change-prompt(🔎  )+reload(fd -H -d 2 -t d -E .Trash . ~)' \
+     --bind 'ctrl-d:execute(tmux kill-session -t {2..})+change-prompt(⚡  )+reload(sesh list --icons)' \
+     --preview-window 'right:55%' \
+     --preview 'sesh preview {}'
+     -- --ansi
+)\""
