--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,21 +24,20 @@ jobs:
           sudo rm -rf /home/linuxbrew
           sudo rm -rf /home/runner/.rustup
       - uses: actions/checkout@v4
-      # enables flakes, nix-command, sets runner as trusted user
-      - uses: DeterminateSystems/nix-installer-action@v12
+      # enables flakes, nix-command
+      - uses: nixbuild/nix-quick-install-action@v30
         with:
-          extra-conf: |
+          nix_conf: |
             trusted-public-keys = cache.nixos.org-1:6NCHdD59X431o0gWypbMrAURkbJ16ZPMQFGspcDShjY= nix-community.cachix.org-1:mB9FSh9qf2dCimDSUo8Zy7bkq5CX+/rkCWyvRCYg3Fs= loudgolem-nur-pkgs-0.cachix.org-1:OINy4hRqrmCH0sslp+tQo4hiBEZJEgA1epza03g5rvY=
             substituters = https://nix-community.cachix.org https://cache.nixos.org https://loudgolem-nur-pkgs-0.cachix.org
-      - uses: DeterminateSystems/magic-nix-cache-action@main
-      # crazy thing, magic-nix-cache runs on top of attic
-      # https://sourcegraph.com/github.com/osdev-wiki/wiki/-/blob/.github/workflows/sitegen.yml?L43:13-43:25
-      - name: cache dependency builds
-        uses: actions/cache@v4
+            keep-env-derivations = true
+            keep-outputs = true
+      - uses: nix-community/cache-nix-action@v6
         with:
-          path: |
-            ~/.cache/nix/
-          key: ${{ runner.os }}
+          # restore and save a cache using this key
+          primary-key: nix-${{ runner.os }}-${{ hashFiles('**/*.nix', '**/flake.lock') }}
+          # if there's no cache hit, restore a cache by this prefix
+          restore-prefixes-first-match: nix-${{ runner.os }}-
       - run: |
           free -h
           swapon --show
