--- a/.github/workflows/iso.yml
+++ b/.github/workflows/iso.yml
@@ -49,6 +49,10 @@ jobs:
           primary-key: nix-${{ runner.os }}-${{ hashFiles('**/*.nix', '**/flake.lock') }}
           # if there's no cache hit, restore a cache by this prefix
           restore-prefixes-first-match: nix-${{ runner.os }}-
+          # collect garbage until the Nix store size (in bytes) is at most this number
+          # before trying to save a new cache
+          # 1G = 1073741824
+          gc-max-store-size-linux: 10G
       # - name: Debugging with browser
       #   uses: fawazahmed0/action-debug@v2
       - run: nix build .#nixosConfigurations.defaultIso.config.system.build.isoImage
