--- a/pkgs/lazy/desktopItems/bottom.desktop
+++ b/pkgs/lazy/desktopItems/bottom.desktop
@@ -1,10 +1,10 @@
 [Desktop Entry]
 Name=bottom
-Version=0.10.2
+Version=1.5
 GenericName=System Monitor
 Comment=A customizable cross-platform graphical process/system monitor for the terminal.
 Exec=btm
 Terminal=true
 Type=Application
-Categories=Utility;System;ConsoleOnly;Monitor;
+Categories=System;ConsoleOnly;Monitor;
 StartupNotify=false
