--- a/pkgs/lazy/desktopItems/subtitlecomposer/org.kde.subtitlecomposer.desktop
+++ b/pkgs/lazy/desktopItems/subtitlecomposer/org.kde.subtitlecomposer.desktop
@@ -1,6 +1,7 @@
 [Desktop Entry]
 Type=Application
 Name=Subtitle Composer
+Name[ar]=صانع الترجمة
 Name[ca]=Subtitle Composer
 Name[ca@valencia]=Subtitle Composer
 Name[cs]=Subtitle Composer
@@ -28,10 +29,10 @@ Name[sl]=Subtitle Composer
 Name[sv]=Textningsskapare
 Name[tr]=Altyazı Oluşturucusu
 Name[uk]=Редактор субтитрів
-Name[x-test]=xxSubtitle Composerxx
 Name[zh_CN]=Subtitle Composer
 Name[zh_TW]=字幕撰寫工具
 GenericName=Subtitle Editor
+GenericName[ar]=محرر الترجمات
 GenericName[ca]=Editor de subtítols
 GenericName[ca@valencia]=Editor de subtítols
 GenericName[cs]=Editor titulků
@@ -60,10 +61,10 @@ GenericName[sl]=Urejevalnik podnaslovov
 GenericName[sv]=Textningseditor
 GenericName[tr]=Altyazı Düzenleyicisi
 GenericName[uk]=Редактор субтитрів
-GenericName[x-test]=xxSubtitle Editorxx
 GenericName[zh_CN]=字幕编辑器
 GenericName[zh_TW]=字幕編輯工具
 Comment=KDE subtitle editor
+Comment[ar]=محرر الترجمات من كيدي
 Comment[ca]=Editor de subtítols per al KDE
 Comment[ca@valencia]=Editor de subtítols per a KDE
 Comment[cs]=Editor titulků v prostředí KDE
@@ -92,7 +93,6 @@ Comment[sl]=Urejevalnik podnaslovov KDE
 Comment[sv]=KDE textningseditor
 Comment[tr]=KDE altyazı düzenleyicisi
 Comment[uk]=Редактор субтитрів від KDE
-Comment[x-test]=xxKDE subtitle editorxx
 Comment[zh_CN]=KDE 字幕编辑器
 Comment[zh_TW]=KDE 字幕編輯器
 Icon=subtitlecomposer
