--- a/.envrc
+++ b/.envrc
@@ -1,3 +1,3 @@
 #!/usr/bin/env bash
 
-use flake .#"devShells.$(nix-instantiate --eval --expr 'builtins.currentSystem' --raw).default"
+use flake .#"devShells.$(nix-instantiate --eval --expr 'builtins.currentSystem' --raw).default" --allow-import-from-derivation
