--- a/.github/workflows/wsl.yml
+++ b/.github/workflows/wsl.yml
@@ -7,10 +7,9 @@ jobs:
     # TODO if nixos.wsl exists with same repo commit hash in previous wf artifacts, continue to run-wsl
     steps:
       - uses: actions/checkout@v4
-      - uses: DeterminateSystems/nix-installer-action@main
+      - uses: cachix/install-nix-action@master
         with:
-          determinate: false
-          extra-conf: |
+          extra_nix_config: |
             trusted-public-keys = cache.nixos.org-1:6NCHdD59X431o0gWypbMrAURkbJ16ZPMQFGspcDShjY= nix-community.cachix.org-1:mB9FSh9qf2dCimDSUo8Zy7bkq5CX+/rkCWyvRCYg3Fs= loudgolem-nur-pkgs-0.cachix.org-1:OINy4hRqrmCH0sslp+tQo4hiBEZJEgA1epza03g5rvY=
             substituters = https://nix-community.cachix.org https://cache.nixos.org https://loudgolem-nur-pkgs-0.cachix.org
       # this thing is broken, it is uploading existing entries and taking hours
