--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,6 +8,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          persist-credentials: false
       - uses: wimpysworld/nothing-but-nix@main
       # enables flakes, nix-command
       - uses: cachix/install-nix-action@master
