--- a/.github/workflows/debug-cache.yml
+++ b/.github/workflows/debug-cache.yml
@@ -15,6 +15,8 @@ jobs:
             substituters = https://nix-community.cachix.org https://cache.nixos.org https://loudgolem-nur-pkgs-0.cachix.org
       - uses: DeterminateSystems/magic-nix-cache-action@main
       - uses: actions/checkout@v4
+        with:
+          persist-credentials: false
       - run: nix build .#homeConfigurations."runner".activationPackage --impure && ./result/activate
       - name: Debugging with browser
         uses: fawazahmed0/action-debug@v2
