--- a/.github/workflows/iso.yml
+++ b/.github/workflows/iso.yml
@@ -11,6 +11,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          persist-credentials: false
       - uses: wimpysworld/nothing-but-nix@main
         # enables flakes, nix-command
       - uses: cachix/install-nix-action@master
@@ -19,6 +21,8 @@ jobs:
             trusted-public-keys = cache.nixos.org-1:6NCHdD59X431o0gWypbMrAURkbJ16ZPMQFGspcDShjY= nix-community.cachix.org-1:mB9FSh9qf2dCimDSUo8Zy7bkq5CX+/rkCWyvRCYg3Fs= loudgolem-nur-pkgs-0.cachix.org-1:OINy4hRqrmCH0sslp+tQo4hiBEZJEgA1epza03g5rvY=
             substituters = https://nix-community.cachix.org https://cache.nixos.org https://loudgolem-nur-pkgs-0.cachix.org
       - uses: DeterminateSystems/magic-nix-cache-action@main
+        with:
+          use-gha-cache: false
       # - name: Debugging with browser
       #   uses: fawazahmed0/action-debug@v2
       - run: nix build .#nixosConfigurations.defaultIso.config.system.build.isoImage
