fish -> bash, but fish in alacritty, tmux
Signed-off-by: phanirithvij <phanirithvij2000@gmail.com>

--- a/pkgs/wrapped-pkgs/tmux/tmux.conf
+++ b/pkgs/wrapped-pkgs/tmux/tmux.conf
@@ -129,6 +129,9 @@ set -ga terminal-overrides ",xterm-256color:Tc"
 # color
 set -g default-terminal "xterm-256color"
 
+# fish
+set -g default-shell @fish@
+
 # fix for xterm-256color, https://stackoverflow.com/q/18600188
 bind-key -n Home send Escape "OH"
 bind-key -n End send Escape "OF"
