--- a/pkgs/lazy/desktopItems/qpwgraph/org.rncbc.qpwgraph.desktop
+++ b/pkgs/lazy/desktopItems/qpwgraph/org.rncbc.qpwgraph.desktop
@@ -3,7 +3,7 @@ Name=qpwgraph
 Version=1.0
 GenericName=PipeWire Graph/Patchbay
 Comment=qpwgraph is a PipeWire graph Qt GUI interface
-Exec=qpwgraph %f
+Exec=qpwgraph -platform xcb %f
 Icon=org.rncbc.qpwgraph
 Categories=AudioVideo;Audio;Video;Midi;X-Alsa;X-PipeWire;Qt;
 MimeType=application/x-qpwgraph-patchbay;
