--- a/pkgs/lazy/desktopItems/gimp.desktop
+++ b/pkgs/lazy/desktopItems/gimp.desktop
@@ -274,5 +274,5 @@ Icon=gimp
 Terminal=false
 Categories=Graphics;2DGraphics;RasterGraphics;GTK;
 StartupNotify=true
-MimeType=image/bmp;image/g3fax;image/gif;image/svg+xml;image/x-compressed-xcf;image/x-fits;image/x-gimp-gbr;image/x-gimp-gih;image/x-gimp-pat;image/x-pcx;image/x-portable-anymap;image/x-portable-bitmap;image/x-portable-graymap;image/x-portable-pixmap;image/x-psd;image/x-sgi;image/x-sun-raster;image/x-tga;image/x-xbitmap;image/x-xcf;image/x-xwindowdump;image/tiff;image/jpeg;image/x-psp;application/postscript;image/png;image/x-icon;image/x-xpixmap;image/x-ilbm;image/x-exr;image/x-webp;image/webp;image/heif;image/heic;image/avif;application/pdf;image/x-wmf;image/jp2;image/jpeg2000;image/jpx;image/jxl;image/x-xcursor;image/fits;image/openraster
-StartupWMClass=gimp-3.0
+MimeType=image/x-xcf;application/pdf;application/postscript;application/x-eps;application/x-navi-animation;image/avif;image/bmp;image/dds;image/g3-fax;image/gif;image/heif;image/hej2k;image/jp2;image/jpeg;image/jxl;image/openraster;image/png;image/svg+xml;image/tiff;image/vnd.microsoft.icon;image/vnd.wap.wbmp;image/webp;image/x-dcm;image/x-dcx;image/x-eps;image/x-exr;image/x-fits;image/x-flic;image/x-icns;image/x-ico;image/x-ilbm;image/x-jp2-codestream;image/x-pcx;image/x-pixmap;image/x-portable-anymap;image/x-portable-arbitrarymap;image/x-portable-bitmap;image/x-portable-floatmap;image/x-portable-graymap;image/x-portable-pixmap;image/x-psd;image/x-psp;image/x-sgi;image/x-sun-raster;image/x-tga;image/x-wmf;image/x-xbitmap;image/x-xwindowdump
+StartupWMClass=gimp
